--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Panel Lock Server</title>
+<title>Server Lock [Beta]</title>
 <style>
 body { font-family: Arial; padding: 20px; }
 button {
@@ -17,7 +17,7 @@ button {
 </head>
 <body>
 
-<h1>Website B – Panel Lock Server</h1>
+<h1>[Beta] Lock Panel</h1>
 
 <button onclick="lockServer()">Lock Server A</button>
 
